# RadeonProRenderUSD

./: .gitignore  .gitmodules  CHANGELOG.MD  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md
.github/: pull_request_template.md
cmake/defaults/: CXXDefaults.cmake  Houdini.cmake  Options.cmake  Packages.cmake  ProjectDefaults.cmake  Version.cmake  gccclangshareddefaults.cmake  msvcdefaults.cmake
cmake/macros/: PlatformIntrospection.cmake  Private.cmake  Public.cmake  copyHeaderForBuild.cmake  parseVersion.cmake  testWrapper.py
cmake/modules/: FindGLEW.cmake  FindHoudiniUSD.cmake  FindOpenEXR.cmake  FindOpenVDB.cmake  FindRif.cmake  FindRpr.cmake  FindTBB.cmake  FindUSD.cmake  FindUSDMonolithic.cmake
pxr/imaging/: CMakeLists.txt
pxr/imaging/hdRprUtils/: CMakeLists.txt  HdRprOptional.hpp
pxr/imaging/plugin/: CMakeLists.txt
pxr/imaging/plugin/glfRatImage/: CMakeLists.txt  glfRatImage.cpp  plugInfo.json
pxr/imaging/plugin/hdRpr/: CMakeLists.txt  ImageFilter.cpp  ImageFilter.h  RadeonProRender.hpp  RadeonProRenderCpp.cpp  aovDescriptor.cpp  aovDescriptor.h  api.h  baseRprim.h  basisCurves.cpp  basisCurves.h  boostIncludePath.h  camera.cpp  camera.h  config.cpp  config.h  cpuFilters.cpp  cpuFilters.h  cylinderLight.cpp  cylinderLight.h  debugCodes.cpp  debugCodes.h  diskLight.cpp  diskLight.h  distantLight.cpp  distantLight.h  domeLight.cpp  domeLight.h  field.cpp  field.h  imageCache.cpp  imageCache.h  instancer.cpp  instancer.h  light.cpp  light.h  lightBase.cpp  lightBase.h  material.cpp  material.h  (+44 more)
pxr/imaging/plugin/hdRpr/houdini/: CMakeLists.txt  HdRprPlugin_Viewport.ds  openvdb.cpp  openvdb.h  rpr_exportRpr1.hda  rprmeshproperties1.hda
pxr/imaging/plugin/hdRpr/notify/: message.cpp  message.h  message.mm
pxr/imaging/plugin/hdRpr/package/: CMakeLists.txt  HoudiniReadme.md  NSIS.template.in  activateHoudiniPlugin.py  activateHoudiniPlugin.py.in  buildPackageWin.bat  buildResolver.py  generatePackage.py  install.py  installPackage.py  license.txt  readme.txt
pxr/imaging/plugin/hdRpr/python/: commonSettings.py  generateFiles.py  generateGeometrySettingFiles.py  generateLightSettingFiles.py  generateRenderSettingFiles.py  houdiniDsGenerator.py  plugInfo.json  rpr.py
pxr/imaging/plugin/hdRpr/rifcpp/: CMakeLists.txt  rifContext.cpp  rifContext.h  rifError.h  rifFilter.cpp  rifFilter.h  rifImage.cpp  rifImage.h  rifObject.h
pxr/imaging/plugin/hdRpr/rpr/: CMakeLists.txt  contextHelpers.cpp  contextHelpers.h  contextMetadata.h  error.h  helpers.h  imageHelpers.cpp  imageHelpers.h
pxr/imaging/plugin/hdRpr/rprcpp/: CMakeLists.txt  rprContext.cpp  rprContext.h  rprError.h  rprException.h  rprFramebuffer.cpp  rprFramebuffer.h  rprFramebufferGL.cpp  rprFramebufferGL.h  rprImage.cpp  rprImage.h  rprObject.h
pxr/imaging/plugin/hdRpr/scripts/: rendersettings_OnLoaded.py
pxr/imaging/plugin/hdRpr/usdviewMenu/: CMakeLists.txt  plugInfo.json  rpr.py
pxr/imaging/plugin/rprHoudini/: CMakeLists.txt  LOP_RPRExportHelper.cpp  LOP_RPRExportHelper.h  LOP_RPRMaterialProperties.cpp  LOP_RPRMaterialProperties.h  LOP_RPRRendererSettings.cpp  LOP_RPRRendererSettings.h  MatLib_INSTALL.md  UsdRenderers.json  VOP_RPRMaterial.cpp  VOP_RPRMaterial.h  activateHoudiniPlugin.cpp  activateHoudiniPlugin.cpp.in  activateMatlibPlugin.cpp  houdiniPluginActivator.cpp.in  plugin.cpp
pxr/imaging/plugin/rprHoudini/hda/: rpr_exportRpr1.hda  rpr_exportToRenderStudio.hda  rpr_standard_rendervars.hda
pxr/imaging/plugin/rprHoudini/scripts/python/houRpr/: cache.py  devices.py  materialLibrary.py  materialLibrary.ui  materialLibraryClient.py  resolver.py
pxr/imaging/plugin/rprHoudini/ui/: MainMenuCommon.xml  MainMenuCommon_resolver.xml
pxr/imaging/rprUsd/: CMakeLists.txt  __init__.py  api.h  boostIncludePath.h  config.cpp  config.h  contextHelpers.cpp  contextHelpers.h  contextMetadata.h  coreImage.cpp  coreImage.h  debugCodes.cpp  debugCodes.h  devicesConfiguration.py  error.h  gpuSupportCheck.cpp  gpuSupportCheck.h  hdMtlxFixed.cpp  helpers.h  hybridCheck.cpp  hybridCheck.h  imageCache.cpp  imageCache.h  lightRegistry.cpp  lightRegistry.h  material.cpp  material.h  materialHelpers.h  materialMappings.cpp  materialMappings.h  materialRegistry.cpp  materialRegistry.h  module.cpp  moduleDeps.cpp  plugInfo.cmake  schema.usda  tokens.cpp  tokens.h  util.cpp  util.h  (+2 more)
pxr/imaging/rprUsd/materialNodes/: houdiniPrincipledShaderNode.cpp  houdiniPrincipledShaderNode.h  materialNode.h  mtlxNode.cpp  mtlxNode.h  rprApiMtlxNode.cpp  rprApiMtlxNode.h  usdNode.cpp  usdNode.h
pxr/imaging/rprUsd/materialNodes/mtlxFiles/: CMakeLists.txt  rpr_defs.mtlx
pxr/imaging/rprUsd/materialNodes/mtlxFiles/Patterns/: rpr_checker_texture.mtlx  rpr_dot_texture.mtlx  rpr_gradient_texture.mtlx  rpr_noise2d_texture.mtlx
pxr/imaging/rprUsd/materialNodes/mtlxFiles/Shaders/: rpr_add.mtlx  rpr_blend.mtlx  rpr_diffuse.mtlx  rpr_diffuse_refraction.mtlx  rpr_emissive.mtlx  rpr_microfacet.mtlx  rpr_microfacet_anisotropic_reflection.mtlx  rpr_microfacet_anisotropic_refraction.mtlx  rpr_microfacet_beckmann.mtlx  rpr_microfacet_refraction.mtlx  rpr_orennayar.mtlx  rpr_passthrough.mtlx  rpr_phong.mtlx  rpr_reflection.mtlx  rpr_refraction.mtlx  rpr_transparent.mtlx  rpr_uber.mtlx  rpr_volume.mtlx  rpr_ward.mtlx
pxr/imaging/rprUsd/materialNodes/mtlxFiles/Utilities/: rpr_blend_value.mtlx  rpr_bump_map.mtlx  rpr_constant_texture.mtlx  rpr_fresnel.mtlx  rpr_fresnel_schlick.mtlx  rpr_hsv_to_rgb.mtlx  rpr_input_lookup.mtlx  rpr_normal_map.mtlx  rpr_primvar_lookup.mtlx  rpr_rgb_to_hsv.mtlx  rpr_twosided.mtlx  rpr_uv_procedural.mtlx  rpr_uv_triplanar.mtlx
pxr/imaging/rprUsd/materialNodes/rpr/: arithmeticNode.cpp  arithmeticNode.h  baseNode.cpp  baseNode.h  catcherNode.cpp  combineShadersNode.cpp  displaceNode.cpp  materialXNode.cpp  materialXNode.h  nodeInfo.h  toonNode.cpp
pxr/imaging/rprUsd/metadataPlugin/: plugInfo.json
